--- a/packages/wallet-connect-sdk-core/docs/assets/highlight.css
+++ b/packages/wallet-connect-sdk-core/docs/assets/highlight.css
@@ -17,11 +17,11 @@
     --dark-hl-7: #DCDCAA;
     --light-hl-8: #008000;
     --dark-hl-8: #6A9955;
-    --light-hl-9: #267F99;
-    --dark-hl-9: #4EC9B0;
-    --light-hl-10: #098658;
-    --dark-hl-10: #B5CEA8;
-    --light-code-background: #FFFFFF;
+    --light-hl-9: #098658;
+    --dark-hl-9: #B5CEA8;
+    --light-hl-10: #267F99;
+    --dark-hl-10: #4EC9B0;
+    --light-code-background: #F5F5F5;
     --dark-code-background: #1E1E1E;
 }
 
